--- a/Module.yaml
+++ b/Module.yaml
@@ -1,6 +1,6 @@
 id: bfbbc919-6247-4428-bf6d-ddef5497061e
 name: Ecounter Spells
-slug: EncounterSpells
+slug: encounterspells
 description: Dungeons and Pi
 category: adventure
 author: Dungeons and Pi
