--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -6,6 +6,8 @@ name: Create Release
 jobs:
   create-release:
     runs-on: ubuntu-latest
+    env:
+          NODE_OPTIONS: '--max_old_space_size=4096'
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
@@ -18,9 +20,6 @@ jobs:
         
       - name: Download encounterplus/module-packer
         run: git clone https://github.com/encounterplus/module-packer.git
-
-      - name: Node Heap Limit (RAM) Fix
-        run: export NODE_OPTIONS="--max_old_space_size=4096"
         
       - name: Build Release .module File
         run: |
