--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -19,6 +19,13 @@ jobs:
       - name: Download pisaucer/module-packer
         run: git clone https://github.com/PiSaucer/module-packer
         
+      - name: Zalgo
+        run: |
+          cd module-packer/source/
+          npm install
+          cd node_modules
+          ls
+
       - name: Build Release .module File
         run: |
           cd module-packer/source/
